Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -143,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/09/14 06:52:37 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/09/14 12:27:18 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -172,7 +172,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f8dd5356100>"
+       "<pyspark.sql.session.SparkSession at 0x7f248b48c100>"
       ]
      },
      "execution_count": 2,
@@ -192,6 +192,9 @@
     "\n",
     "# Nombramos la instancia\n",
     "spark = spark.appName(\"Instancia_Tutorial_PySpark\")\n",
+    "\n",
+    "# Exigimos a Spark que almacene sus datos en el directorio Archivos.\n",
+    "spark = spark.config(\"spark.sql.warehouse.dir\", \"./Archivos/\")\n",
     "\n",
     "# Habilitamos la interacción con archivos de bases de datos\n",
     "spark = spark.enableHiveSupport()\n",
@@ -388,6 +391,13 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -964,7 +974,7 @@
     "\n",
     "* `on`: permite usar una o varias columnas de los `DataFrame` para encontrar las coincidencias. Las columnas especificadas deben existir en ambos `DataFrame`.<br><br>\n",
     "\n",
-    "* `how`: es `\"inner\"` por defecto. Puedes consultar los posibles valores en la [documentación](https://spark.apache.org/docs/3.1.1/api/python/reference/api/pyspark.sql.DataFrame.join.html#pyspark.sql.DataFrame.join), aunque por lo general todas las operaciones `join` tienen la misma nomenclatura independiente del programa de manejo de datos. <br><br>"
+    "* `how`: es `\"inner\"` por defecto. Puedes consultar los posibles valores en la [documentación](https://spark.apache.org/docs/3.1.1/api/python/reference/api/pyspark.sql.DataFrame.join.html#pyspark.sql.DataFrame.join), aunque por lo general todas las operaciones `join` tienen la misma nomenclatura independiente del programa de manejo de datos. <br>"
    ]
   },
   {
@@ -1265,7 +1275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Presentamos un ejemplo de cómo podemos ralizar la misma consulta sobre el `DataFrame` `df_covid_19`, por medio del método `sql`."
+    "Presentamos un ejemplo de cómo podemos realizar la misma consulta sobre el `DataFrame` `df_covid_19`, por medio del método `sql`."
    ]
   },
   {
@@ -1333,16 +1343,319 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para almacenar nuestros datos de manera eficiente y poder acceder a ellos en el futuro, nos apoyamos en los administradores de bases de datos relacionales (tipo SQL). Spark incluye su propio administrador de bases de datos."
+    "Para almacenar nuestros datos de manera eficiente y poder acceder a ellos en el futuro, nos apoyamos en los administradores de bases de datos relacionales (tipo SQL). Spark incluye su propio administrador de bases de datos que nos permite interactuar con archivos compatibles con extensión `.db`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilicemos una consulta de definición para crear una base de datos que pueda almacenar varias tablas. Siempre que querramos crear una base de datos o una tabla dentro de la misma, utilizamos el comando `CREATE` de SQL. La práctica más común es crear una única base de datos y en esta almacenar todas las tablas que querramos persistir."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/09/14 12:27:29 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "22/09/14 12:27:29 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "22/09/14 12:27:31 WARN ObjectStore: Version information not found in metastore. hive.metastore.schema.verification is not enabled so recording the schema version 2.3.0\n",
+      "22/09/14 12:27:31 WARN ObjectStore: setMetaStoreSchemaVersion called but recording version is disabled: version = 2.3.0, comment = Set by MetaStore alejoman@192.168.20.44\n",
+      "22/09/14 12:27:31 WARN ObjectStore: Failed to get database default, returning NoSuchObjectException\n",
+      "22/09/14 12:27:31 WARN ObjectStore: Failed to get database demo_db, returning NoSuchObjectException\n",
+      "22/09/14 12:27:31 WARN ObjectStore: Failed to get database demo_db, returning NoSuchObjectException\n",
+      "22/09/14 12:27:31 WARN ObjectStore: Failed to get database global_temp, returning NoSuchObjectException\n",
+      "22/09/14 12:27:31 WARN ObjectStore: Failed to get database demo_db, returning NoSuchObjectException\n"
+     ]
+    }
+   ],
+   "source": [
+    "consulta = \\\n",
+    "'''\\\n",
+    "CREATE DATABASE IF NOT EXISTS demo_db\n",
+    "'''\n",
+    "\n",
+    "_ = spark.sql(consulta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "|namespace|\n",
+      "+---------+\n",
+      "|  default|\n",
+      "|  demo_db|\n",
+      "+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "consulta = \\\n",
+    "'''\\\n",
+    "SHOW DATABASES\n",
+    "'''\n",
+    "\n",
+    "spark.sql(consulta).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`IF NOT EXISTS` nos permite evitar comportamiento inesperado. En caso de que ya exista un objeto del mismo tipo que queremos crear, con el nombre especificado, la consulta no tiene efecto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Luego de crear la base de datos, encontraremos un archivo o directorio llamado `demo_db.db` en nuestra carpeta de archivos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Archivos/demo_db.db']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "\n",
+    "\n",
+    "# Retorna una lista con la ruta relativa a cualquier directorio\n",
+    "# o archivo terminado en `\".db\"`, dentro de la carpeta `\"Archivos\"`.\n",
+    "glob.glob(\"Archivos/*.db\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cuando creamos una tabla, debemos especificar qué columnas va a tener y el tipo de datos que van a almacenar. Para que las bases de datos de SQL ser eficientes, necesitan conocimiento absoluto acerca de cuánto espacio van a ocupar sus datos. Introducimos una tabla vacía con nombre `tabla_1` y columnas `id`, `name` y `age` de tipos `INT` (entero), `STRING` (cadena de texto) e `INT` respectivamente. Para garantizar que la tabla se crea dentro de la base de datos, seguimos el patrón: `<database_name>.<table_name>`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/09/14 12:27:31 WARN SessionState: METASTORE_FILTER_HOOK will be ignored, since hive.security.authorization.manager is set to instance of HiveAuthorizerFactory.\n",
+      "22/09/14 12:27:31 WARN HiveConf: HiveConf of name hive.internal.ss.authz.settings.applied.marker does not exist\n",
+      "22/09/14 12:27:31 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "22/09/14 12:27:31 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "22/09/14 12:27:31 WARN HiveMetaStore: Location: file:/home/alejoman/Documents/Semestres/Semestre 13/LCA/Laboratorio-Computacional-de-Analytics/S5 - Extraer, transformar y cargar datos/S5.TU3/Archivos/demo_db.db/tabla_1 specified for non-external table:tabla_1\n"
+     ]
+    }
+   ],
+   "source": [
+    "consulta = \\\n",
+    "'''\\\n",
+    "CREATE TABLE IF NOT EXISTS demo_db.tabla_1 (id INT,\n",
+    "    name STRING,\n",
+    "    age INT)\n",
+    "STORED AS ORC;\n",
+    "'''\n",
+    "\n",
+    "_ = spark.sql(consulta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Validamos que existe la tabla en la base de datos, aunque esta no contenga registros."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----+---+\n",
+      "| id|name|age|\n",
+      "+---+----+---+\n",
+      "+---+----+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "consulta = \\\n",
+    "'''\\\n",
+    "SELECT *\n",
+    "FROM demo_db.tabla_1;\n",
+    "'''\n",
+    "\n",
+    "spark.sql(consulta).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizamos el comando `INSERT INTO` para ingresar nuevas filas en una tabla."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# spark.sql(\"CREATE DATABASE Test_db\")"
+    "consulta = \\\n",
+    "'''\\\n",
+    "INSERT INTO demo_db.tabla_1\n",
+    "VALUES (1, 'Camilo Gomez', NULL);\n",
+    "'''\n",
+    "\n",
+    "_ = spark.sql(consulta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Volvemos a consultar la tabla para validar que agregamos el registro correctamente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+------------+----+\n",
+      "| id|        name| age|\n",
+      "+---+------------+----+\n",
+      "|  1|Camilo Gomez|null|\n",
+      "+---+------------+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "consulta = \\\n",
+    "'''\\\n",
+    "SELECT *\n",
+    "FROM demo_db.tabla_1;\n",
+    "'''\n",
+    "\n",
+    "spark.sql(consulta).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En lugar de crear una tabla registro por registro, podemos utilizar los `DataFrame` con los que venimos trabajando que ya existen en `pyspark`. Por ejemplo, podemos ingresar a nuestra base de datos la tabla `df_covid_19` (recuerda que esta la hicimos visible a SQL por medio del método `createOrReplaceTempView`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/09/14 12:37:52 WARN HiveMetaStore: Location: file:/home/alejoman/Documents/Semestres/Semestre 13/LCA/Laboratorio-Computacional-de-Analytics/S5 - Extraer, transformar y cargar datos/S5.TU3/Archivos/demo_db.db/df_covid_19 specified for non-external table:df_covid_19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "consulta = \\\n",
+    "'''\\\n",
+    "CREATE TABLE IF NOT EXISTS demo_db.df_covid_19 STORED AS ORC\n",
+    "    AS SELECT * FROM df_covid_19;\n",
+    "'''\n",
+    "\n",
+    "_ = spark.sql(consulta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Validamos que la tabla existe en la base de datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-------------------------+----------------+----------------------+--------------+-----------------+--------------------------+-----------------+-----------------------+---------------+------------------+\n",
+      "|       id|medios_noti_redessociales|medios_noti_chat|medios_noti_periodicos|medios_noti_tv|medios_noti_radio|medios_covid_redessociales|medios_covid_chat|medios_covid_periodicos|medios_covid_tv|medios_covid_radio|\n",
+      "+---------+-------------------------+----------------+----------------------+--------------+-----------------+--------------------------+-----------------+-----------------------+---------------+------------------+\n",
+      "|4022452.0|                  Siempre|         Siempre|                 Nunca|       Siempre|          Siempre|                   Siempre|     Casi siempre|                  Nunca|        Siempre|           Siempre|\n",
+      "|4013528.0|                  Siempre|         Siempre|                 Nunca|       Siempre|          Siempre|                   Siempre|          Siempre|                  Nunca|        Siempre|           Siempre|\n",
+      "|4005685.0|                  Siempre|         Siempre|               Siempre|       Siempre|          Siempre|                   Siempre|          Siempre|                Siempre|        Siempre|           Siempre|\n",
+      "+---------+-------------------------+----------------+----------------------+--------------+-----------------+--------------------------+-----------------+-----------------------+---------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "consulta = \\\n",
+    "'''\\\n",
+    "SELECT *\n",
+    "FROM demo_db.df_covid_19;\n",
+    "'''\n",
+    "\n",
+    "spark.sql(consulta).limit(3).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conocemos ahora nuevas formas en las que podemos interactuar con nuestros datos en Python. En breve, podemos extraer datos de casi cualquier formato (incluyendo bases de datos de SQL), transformar sus representaciones en Python como `DataFrame` y cargarlos para ocasiones futuras en otra o la misma base de datos de SQL."
    ]
   },
   {
