Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -143,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/09/14 12:27:18 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/09/14 13:13:43 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -172,7 +172,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f248b48c100>"
+       "<pyspark.sql.session.SparkSession at 0x7f0779051430>"
       ]
      },
      "execution_count": 2,
@@ -181,7 +181,7 @@
     }
    ],
    "source": [
-    "# Importamos el metodo SparkSession\n",
+    "# Importamos la clase SparkSession\n",
     "from pyspark.sql import SparkSession\n",
     "\n",
     "# Invocamos un constructor de sesiones de Spark SQL\n",
@@ -202,6 +202,8 @@
     "# Inicializamos la instancia\n",
     "spark = spark.getOrCreate()\n",
     "\n",
+    "# Aunque no lo recomendamos para tu desarrollo, apagaremos las advertencias de este notebook.\n",
+    "spark.sparkContext.setLogLevel(\"OFF\")\n",
     "spark"
    ]
   },
@@ -391,13 +393,6 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -1357,23 +1352,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/09/14 12:27:29 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
-      "22/09/14 12:27:29 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
-      "22/09/14 12:27:31 WARN ObjectStore: Version information not found in metastore. hive.metastore.schema.verification is not enabled so recording the schema version 2.3.0\n",
-      "22/09/14 12:27:31 WARN ObjectStore: setMetaStoreSchemaVersion called but recording version is disabled: version = 2.3.0, comment = Set by MetaStore alejoman@192.168.20.44\n",
-      "22/09/14 12:27:31 WARN ObjectStore: Failed to get database default, returning NoSuchObjectException\n",
-      "22/09/14 12:27:31 WARN ObjectStore: Failed to get database demo_db, returning NoSuchObjectException\n",
-      "22/09/14 12:27:31 WARN ObjectStore: Failed to get database demo_db, returning NoSuchObjectException\n",
-      "22/09/14 12:27:31 WARN ObjectStore: Failed to get database global_temp, returning NoSuchObjectException\n",
-      "22/09/14 12:27:31 WARN ObjectStore: Failed to get database demo_db, returning NoSuchObjectException\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "consulta = \\\n",
     "'''\\\n",
@@ -1461,19 +1440,7 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/09/14 12:27:31 WARN SessionState: METASTORE_FILTER_HOOK will be ignored, since hive.security.authorization.manager is set to instance of HiveAuthorizerFactory.\n",
-      "22/09/14 12:27:31 WARN HiveConf: HiveConf of name hive.internal.ss.authz.settings.applied.marker does not exist\n",
-      "22/09/14 12:27:31 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
-      "22/09/14 12:27:31 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
-      "22/09/14 12:27:31 WARN HiveMetaStore: Location: file:/home/alejoman/Documents/Semestres/Semestre 13/LCA/Laboratorio-Computacional-de-Analytics/S5 - Extraer, transformar y cargar datos/S5.TU3/Archivos/demo_db.db/tabla_1 specified for non-external table:tabla_1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "consulta = \\\n",
     "'''\\\n",
@@ -1502,10 +1469,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+----+---+\n",
-      "| id|name|age|\n",
-      "+---+----+---+\n",
-      "+---+----+---+\n",
+      "+---+------------+----+\n",
+      "| id|        name| age|\n",
+      "+---+------------+----+\n",
+      "|  1|Camilo Gomez|null|\n",
+      "+---+------------+----+\n",
       "\n"
      ]
     }
@@ -1562,6 +1530,7 @@
       "| id|        name| age|\n",
       "+---+------------+----+\n",
       "|  1|Camilo Gomez|null|\n",
+      "|  1|Camilo Gomez|null|\n",
       "+---+------------+----+\n",
       "\n"
      ]
@@ -1588,22 +1557,7 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/09/14 12:37:52 WARN HiveMetaStore: Location: file:/home/alejoman/Documents/Semestres/Semestre 13/LCA/Laboratorio-Computacional-de-Analytics/S5 - Extraer, transformar y cargar datos/S5.TU3/Archivos/demo_db.db/df_covid_19 specified for non-external table:df_covid_19\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "consulta = \\\n",
     "'''\\\n",
@@ -1623,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
