Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -1356,7 +1356,7 @@
    "source": [
     "consulta = \\\n",
     "'''\\\n",
-    "CREATE DATABASE IF NOT EXISTS demo_db\n",
+    "CREATE DATABASE IF NOT EXISTS demo_db;\n",
     "'''\n",
     "\n",
     "_ = spark.sql(consulta)"
@@ -1384,7 +1384,7 @@
    "source": [
     "consulta = \\\n",
     "'''\\\n",
-    "SHOW DATABASES\n",
+    "SHOW DATABASES;\n",
     "'''\n",
     "\n",
     "spark.sql(consulta).show()"
