Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -1345,7 +1345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Utilicemos una consulta de definición para crear una base de datos que pueda almacenar varias tablas. Siempre que querramos crear una base de datos o una tabla dentro de la misma, utilizamos el comando `CREATE` de SQL. La práctica más común es crear una única base de datos y en esta almacenar todas las tablas que querramos persistir."
+    "Utilicemos una consulta de definición para crear una base de datos que pueda almacenar varias tablas. Siempre que queramos crear una base de datos o una tabla dentro de la misma, utilizamos el comando `CREATE` de SQL. La práctica más común es crear una única base de datos y en esta almacenar todas las tablas que queramos persistir."
    ]
   },
   {
