Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "hide-input",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -158,10 +158,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/09/14 23:50:02 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "22/09/14 23:50:03 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "22/09/14 23:50:03 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
-      "22/09/14 23:50:03 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n"
+      "22/09/15 08:09:21 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/09/15 08:09:21 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     },
     {
@@ -174,7 +172,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://alejoman-pc:4043\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://alejoman-pc:4041\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -190,10 +188,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f5d353c4f70>"
+       "<pyspark.sql.session.SparkSession at 0x7f184850d220>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +303,7 @@
        "ParallelCollectionRDD[0] at readRDDFromFile at PythonRDD.scala:274"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +358,7 @@
        "PythonRDD[1] at RDD at PythonRDD.scala:53"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +395,7 @@
        " ['Programa_5', 8000, 3505, 'LAN']]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,26 +406,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "[Stage 1:>                                                          (0 + 8) / 8]\r",
-      "\r",
-      "                                                                                \r"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[9000000, 23807000, 350000, 25905000, 28040000]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +470,7 @@
        "DataFrame[Nombre: string, Descargas: bigint, Lineas_de_codigo: bigint, Region: string]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -581,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +580,7 @@
        " Row(Nombre='Programa_3', Descargas=50, Lineas_de_codigo=7000, Region='LAS')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +601,7 @@
        " Row(Nombre='Programa_5', Descargas=8000, Lineas_de_codigo=3505, Region='LAN')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +729,7 @@
        "4  Programa_5       8000              3505    LAN"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -893,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1181,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1303,17 +1291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "[Stage 41:=========>                                                (1 + 5) / 6]\r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1344,14 +1324,6 @@
       "+----------------+----------------------+--------------+-----+\n",
       "only showing top 20 rows\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "                                                                                \r"
      ]
     }
    ],
@@ -1393,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1437,7 @@
        "['Archivos/demo_db.db']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1569,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1551,6 @@
       "+---+------------+----+\n",
       "| id|        name| age|\n",
       "+---+------------+----+\n",
-      "|  1|Camilo Gomez|null|\n",
       "|  1|Camilo Gomez|null|\n",
       "+---+------------+----+\n",
       "\n"
@@ -1605,17 +1576,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "consulta = \\\n",
     "'''\\\n",
@@ -1635,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
