Submited changes from upstream to Mini.

--- a/S1 - Bienvenida, estructuras de datos y de control/S1.TU1/TUTORIAL - Bienvenida a Jupyter y Python.ipynb
+++ b/S1 - Bienvenida, estructuras de datos y de control/S1.TU1/TUTORIAL - Bienvenida a Jupyter y Python.ipynb
@@ -135,7 +135,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Utilizamos este tipo de celdas para escribir texto. Podemos agregar títulos para establecer orden y jerarquía en nuestro Notebook. Asimismo, podemos agregar expresiones matemáticas en lenguaje LaTeX y añadir imágenes."
+    "Utilizamos este tipo de celdas para escribir texto. Podemos agregar títulos para establecer orden y jerarquía en nuestro Notebook. Asimismo, podemos agregar expresiones matemáticas en lenguaje LaTeX y añadir imágenes.\n",
+    "\n",
+    "Referencia de comandos y escritura LaTeX: https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes"
    ]
   },
   {
@@ -945,14 +947,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Erorres"
+    "## 4. Errores"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cuando Python no es capaz de ejecutar el código escrito en una celda, nos aparece una excepción en el `Out` indicandonos qué línea está generando el error, el tipo de error y su causa. Esta información es útil, ya que nos da indicios de como corregir el error. A continuación, algunos ejemplos de errores en Python."
+    "Cuando Python no es capaz de ejecutar el código escrito en una celda, nos aparece una excepción en el `Out` (Resultado inferior a la celda de código) indicandonos qué línea está generando el error, el tipo de error y su causa. Esta información es útil, ya que nos da indicios de como corregir el error. A continuación, algunos ejemplos de errores en Python."
    ]
   },
   {
@@ -1089,7 +1091,13 @@
    "source": [
     "**Tip 1**\n",
     "\n",
-    "Cuando te salga un error que no entiendas, te recomendamos copiar la última línea del error y pegarla en tu buscador web de preferencia. En internet hay una gran variedad de foros en los que se explican la mayoría de los errores que te pueden ocurrir. Te recomendamos acceder a los enlaces de la página Stack Overflow."
+    "Cuando te salga un error que no entiendas, te recomendamos copiar la última línea del error y pegarla en tu buscador web de preferencia. En internet hay una gran variedad de foros en los que se explican la mayoría de los errores que te pueden ocurrir. Te recomendamos acceder a los enlaces de la página Stack Overflow.\n",
+    "\n",
+    "Un ejemplo puede ser el siguiente error:\n",
+    "\n",
+    "__ZeroDivisionError:__ division by zero\n",
+    "\n",
+    "link de Stack Overflow para ayuda: https://stackoverflow.com/questions/29836964/error-python-zerodivisionerror-division-by-zero"
    ]
   },
   {
@@ -1126,8 +1134,10 @@
    "metadata": {},
    "source": [
     "__Autores__: Juan Felipe Rengifo Méndez, Ariadna Sofía de Ávila Bula, Alejandro Mantilla Redondo, Diego Alejandro Cely Gómez\n",
-    " \n",
-    "__Fecha última actualización__: 12/07/2022"
+    "\n",
+    "__Actualizado por__: Jose Fernando Barrera De Plaza\n",
+    "\n",
+    "__Fecha última actualización__: 06/08/2023"
    ]
   }
  ],
