--- a/S1 - Bienvenida, estructuras de datos y de control/S1.TU2/TUTORIAL - Estructuras de datos.ipynb
+++ b/S1 - Bienvenida, estructuras de datos y de control/S1.TU2/TUTORIAL - Estructuras de datos.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Al inciar un proyecto de analítica de datos resulta fundamental almacenar información en la máquina con el fin de procesarla de una manera eficiente. Las estructuras de datos resuelven esta necesidad, pues nos proveen diferentes formas de representar información computacionalmente. "
+    "Al inciar un proyecto de analítica de datos resulta fundamental almacenar información en la máquina con el fin de procesarla de una manera eficiente. Las estructuras de datos resuelven esta necesidad, ya que nos proveen diferentes formas de representar información computacionalmente. "
    ]
   },
   {
@@ -2109,7 +2109,9 @@
    "source": [
     "__Autores:__ Jorge Esteban Camargo Forero, Juan Felipe Rengifo Méndez, Alejandro Mantilla Redondo, Diego Alejandro Cely Gómez\n",
     "\n",
-    "__Fecha última actualización:__ 12/07/2022"
+    "__Actualizado por__: Jose Fernando Barrera De Plaza\n",
+    "\n",
+    "__Fecha última actualización:__ 06/08/2023"
    ]
   }
  ],
