--- a/S1 - Bienvenida, estructuras de datos y de control/S1.TU3/TUTORIAL - Estructuras de control.ipynb
+++ b/S1 - Bienvenida, estructuras de datos y de control/S1.TU3/TUTORIAL - Estructuras de control.ipynb
@@ -1406,7 +1406,9 @@
    "source": [
     "__Autores__: Camilo Falla Moreno, Ariadna Sofía de Ávila Bula, Juan Felipe Rengifo Méndez, Alejandro Mantilla Redondo, Diego Alejandro Cely Gómez\n",
     "\n",
-    "__Fecha última actualización:__ 12/07/2022"
+    "__Actualizado por__: Jose Fernando Barrera De Plaza\n",
+    "\n",
+    "__Fecha última actualización:__ 06/08/2023"
    ]
   }
  ],
